--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section id="chap7"></section>
     <section id="chap8"></section>
 </main>
-<script src="../script/script.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js%22%3E"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js%22%3E"></script>
-    
+    <script src="script.js"></script>
 </body>
 </html>
