--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <link rel="stylesheet" href="../css/styles.css">
     
     <title>Smiley</title>
-    <link rel="icon" type="image/x-icon" href="/img/img_personnages/face.png" class="fav">
+    <link rel="icon" type="image/x-icon" href="/img/img_personnages/fav.png" class="fav">
 </head>
 <body>
  <header>
@@ -38,8 +39,7 @@
     <section id="chap8"></section>
 </main>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js%22%3E"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js%22%3E"></script>
-    <script src="script.js"></script>
+
+    <script src="../script/script.js"></script>
 </body>
 </html>
