--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
 <main>
     <section id="chap1"></section>
-    <section id="chap2"></section>
+    <section id="chap2"><img src="../img/img_elements_visuels/gazon_coucher_soleil.png" class="gazon"></section>
     <section id="chap3"></section>
-    <section id="chap4"></section>
+    <section id="chap4"><img src="../img/img_elements_visuels/falaise.png" class="falaise"></section>
     <section id="chap5"></section>
     <section id="chap6"></section>
-    <section id="chap7"></section>
+    <section id="chap7"><img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol"></section>
     <section id="chap8"></section>
 </main>
 
