--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
     <section id="chap4"><img src="../img/img_elements_visuels/falaise.png" class="falaise"></section>
     <section id="chap5"></section>
     <section id="chap6"></section>
-    <section id="chap7"><img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol"></section>
-    <section id="chap8"></section>
+    <section id="chap7"><img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol">
+        <img src="../img/img_elements_visuels/soleil.png" class="soleil"></section>
+    <section id="chap8">
+        <img src="../img/img_elements_visuels/coline_bizzare.png" class="coline">
+        <img src="../img/img_elements_visuels/soleil.png" class="soleil"></section>
 </main>
 
 
