--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
  </header>
 
 <main>
-    <section id="chap1"></section>
+    <section id="chap1"><div class="spritesheet"></div>
+        <img src="../img/img_elements_visuels/gazon.png" class="gaz">
+        <img src="../img/img_elements_visuels/soleil.png" class="jour"></section>
     <section id="chap2"><img src="../img/img_elements_visuels/gazon_coucher_soleil.png" class="gazon"></section>
     <section id="chap3"></section>
     <section id="chap4"><img src="../img/img_elements_visuels/falaise.png" class="falaise"></section>
