--- a/index.html
+++ b/index.html
@@ -30,18 +30,34 @@
 
 <main>
     <section id="chap1"><div class="spritesheet"></div>
-        <img src="../img/img_elements_visuels/gazon.png" class="gaz">
-        <img src="../img/img_elements_visuels/soleil.png" class="jour"></section>
-    <section id="chap2"><img src="../img/img_elements_visuels/gazon_coucher_soleil.png" class="gazon"></section>
-    <section id="chap3"></section>
-    <section id="chap4"><img src="../img/img_elements_visuels/falaise.png" class="falaise"></section>
+        <img src="../img/img_elements_visuels/gazon.png" class="gaz" alt="gaz">
+        <img src="../img/img_elements_visuels/soleil.png" class="jour" alt="jour"></section>
+    <section id="chap2"><img src="../img/img_elements_visuels/gazon_coucher_soleil.png" class="gazon" alt="gazon">
+        <img src="../img/img_elements_visuels/vert_montagne.png" class="montagne1" alt="montagne1">
+        <img src="../img/img_elements_visuels/foncer_montagne.png" class="montagne2" alt="montagne2">
+        <img src="../img/img_elements_visuels/clair_montagne.png" class="montagne3" alt="montagne3">
+        <img src="../img/img_personnages/petit.png" class="petit" alt="petit">
+    </section>
+    <section id="chap3">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no1" alt="étoile1">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no2" alt="étoile2">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no3" alt="étoile3">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile moyen no1" alt="étoile4">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile moyen no2" alt="étoile5">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile moyen no3" alt="étoile6">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile petit no1" alt="étoile7">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile petit no2" alt="étoile8">
+        <img src="../img/img_elements_visuels/etoile.png" class="étoile petit no3" alt="étoile9">
+        <img src="../img/img_elements_visuels/lune.png" class="lune" alt="lune">
+    </section>
+    <section id="chap4"><img src="../img/img_elements_visuels/falaise.png" class="falaise" alt="falaise"></section>
     <section id="chap5"></section>
     <section id="chap6"></section>
-    <section id="chap7"><img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol">
-        <img src="../img/img_elements_visuels/soleil.png" class="soleil"></section>
+    <section id="chap7"><img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol" alt="sol">
+        <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil"></section>
     <section id="chap8">
-        <img src="../img/img_elements_visuels/coline_bizzare.png" class="coline">
-        <img src="../img/img_elements_visuels/soleil.png" class="soleil"></section>
+        <img src="../img/img_elements_visuels/coline_bizzare.png" class="coline" alt="coline">
+        <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil"></section>
 </main>
 
 
