--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <img src="../img/img_personnages/petit.png" class="petit" alt="petit">
     </section>
     <section id="chap3">
+        
         <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no1" alt="étoile1">
         <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no2" alt="étoile2">
         <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no3" alt="étoile3">
@@ -49,10 +50,26 @@
         <img src="../img/img_elements_visuels/etoile.png" class="étoile petit no2" alt="étoile8">
         <img src="../img/img_elements_visuels/etoile.png" class="étoile petit no3" alt="étoile9">
         <img src="../img/img_elements_visuels/lune.png" class="lune" alt="lune">
+        <img src="../img/img_personnages/face.png" class="face" alt="face">
     </section>
-    <section id="chap4"><img src="../img/img_elements_visuels/falaise.png" class="falaise" alt="falaise"></section>
-    <section id="chap5"></section>
-    <section id="chap6"></section>
+    <section id="chap4">
+        <img src="../img/img_elements_visuels/falaise.png" class="falaise" alt="falaise">
+        <img src="../img/img_personnages/fall.png" class="fall" alt="fall">
+        <img src="../img/img_elements_visuels/soleil.png" class="solei" alt="solei"></section>
+    </section>
+        <section id="chap5">
+            <img src="../img/img_elements_visuels/nuage.png" class="nuage no1" alt="nuage">
+            <img src="../img/img_elements_visuels/nuage.png" class="nuage no2" alt="nuage">
+            <img src="../img/img_elements_visuels/nuage.png" class="nuage no3" alt="nuage">
+            <img src="../img/img_elements_visuels/nuage.png" class="nuage no4" alt="nuage">
+            <img src="../img/img_personnages/tomber.png" class="tomber" alt="tomber">
+        </section>
+    <section id="chap6">
+        <img src="../img/img_elements_visuels/nuage.png" class="nuage no1" alt="nuage">
+        <img src="../img/img_elements_visuels/nuage.png" class="nuage no2" alt="nuage">
+        <img src="../img/img_elements_visuels/nuage.png" class="nuage no3" alt="nuage">
+        <img src="../img/img_elements_visuels/nuage.png" class="nuage no4" alt="nuage">
+    </section>
     <section id="chap7"><img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol" alt="sol">
         <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil"></section>
     <section id="chap8">
