--- a/index.html
+++ b/index.html
@@ -69,12 +69,19 @@
         <img src="../img/img_elements_visuels/nuage.png" class="nuage no2" alt="nuage">
         <img src="../img/img_elements_visuels/nuage.png" class="nuage no3" alt="nuage">
         <img src="../img/img_elements_visuels/nuage.png" class="nuage no4" alt="nuage">
+        <img src="../img/img_personnages/smiley_ballon_vole.png" class="vole" alt="vole">
     </section>
-    <section id="chap7"><img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol" alt="sol">
-        <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil"></section>
+    <section id="chap7">
+        
+        <img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol" alt="sol">
+        <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil">
+        <div class="spritesheet2"></div>
+    </section>
     <section id="chap8">
         <img src="../img/img_elements_visuels/coline_bizzare.png" class="coline" alt="coline">
-        <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil"></section>
+        <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil">
+        <img src="../img/img_personnages/couple.png" class="couple" alt="couple">
+    </section>
 </main>
 
 
