--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="../img/img_elements_visuels/vert_montagne.png" class="montagne1" alt="montagne1">
         <img src="../img/img_elements_visuels/foncer_montagne.png" class="montagne2" alt="montagne2">
         <img src="../img/img_elements_visuels/clair_montagne.png" class="montagne3" alt="montagne3">
-        <img src="../img/img_personnages/petit.png" class="petit" alt="petit">
+        <img src="../img/img_personnages/petit.png" class="petite" alt="petite">
     </section>
     <section id="chap3">
         
