--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <img src="../img/img_elements_visuels/nuage.png" class="nuage no3" alt="nuage">
         <img src="../img/img_elements_visuels/nuage.png" class="nuage no4" alt="nuage">
         <img src="../img/img_personnages/smiley_ballon_vole.png" class="vole" alt="vole">
+        <img src="../img/img_elements_visuels/oiseau.png" class="oiseau" alt="oiseau">
     </section>
     <section id="chap7">
         
