--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
  <header>
    <h1>Les aventures de Smiley</h1>
-   <h2>Faites défiler vers la droite</h2>
+   <h2>Faites défiler vers le bas</h2>
 <img src="../img/img_elements_visuels/flech.png" class="flech">
     <p>« Projet créé dans le cadre du cours Optimisation Web - Intégration multimédia - Collège Montmorency.
         © 2023 - Conception : Thea Lacasse| Développement Web : Maïka Désy. »</p>
