--- a/index.html
+++ b/index.html
@@ -29,17 +29,21 @@
  </header>
 
 <main>
-    <section id="chap1"><div class="spritesheet"></div>
+    <section id="chap1"><span>Smiley est une petite boule jaune qui se promène </br>pour explorer de 
+        nouvelle chose.
+    </span><div class="spritesheet"></div>
         <img src="../img/img_elements_visuels/gazon.png" class="gaz" alt="gaz">
         <img src="../img/img_elements_visuels/soleil.png" class="jour" alt="jour"></section>
-    <section id="chap2"><img src="../img/img_elements_visuels/gazon_coucher_soleil.png" class="gazon" alt="gazon">
+    <section id="chap2">
+        <span>Il alla jusqu'au bout du monde il traversa les montagne,</br> sous la vue du merveilleux paysage.</span>
+        <img src="../img/img_elements_visuels/gazon_coucher_soleil.png" class="gazon" alt="gazon">
         <img src="../img/img_elements_visuels/vert_montagne.png" class="montagne1" alt="montagne1">
         <img src="../img/img_elements_visuels/foncer_montagne.png" class="montagne2" alt="montagne2">
         <img src="../img/img_elements_visuels/clair_montagne.png" class="montagne3" alt="montagne3">
         <img src="../img/img_personnages/petit.png" class="petite" alt="petite">
     </section>
     <section id="chap3">
-        
+        <span>Souvent il s'arrêta pour contempler les étoiles, Smiley adorait sa vie.</span>
         <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no1" alt="étoile1">
         <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no2" alt="étoile2">
         <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no3" alt="étoile3">
@@ -52,7 +56,7 @@
         <img src="../img/img_elements_visuels/lune.png" class="lune" alt="lune">
         <img src="../img/img_personnages/face.png" class="face" alt="face">
     </section>
-    <section id="chap4">
+    <section id="chap4"><span>Mais un jour pendant que Smiley escaladait les montagnes, il n'a pas fais gaffe </br> à la falaise. Il tenta de tenir l'équilibre pour ne pas tomber. :O</span>
         <img src="../img/img_elements_visuels/falaise.png" class="falaise" alt="falaise">
         <img src="../img/img_personnages/fall.png" class="fall" alt="fall">
         <img src="../img/img_elements_visuels/soleil.png" class="solei" alt="solei"></section>
