--- a/index.html
+++ b/index.html
@@ -61,14 +61,15 @@
         <img src="../img/img_personnages/fall.png" class="fall" alt="fall">
         <img src="../img/img_elements_visuels/soleil.png" class="solei" alt="solei"></section>
     </section>
-        <section id="chap5">
+        <section id="chap5"><span>Malheureusement pour Smiley il perda l'équilibre et tomba!!!</span>
             <img src="../img/img_elements_visuels/nuage.png" class="nuage no1" alt="nuage">
             <img src="../img/img_elements_visuels/nuage.png" class="nuage no2" alt="nuage">
             <img src="../img/img_elements_visuels/nuage.png" class="nuage no3" alt="nuage">
             <img src="../img/img_elements_visuels/nuage.png" class="nuage no4" alt="nuage">
             <img src="../img/img_personnages/tomber.png" class="tomber" alt="tomber">
         </section>
-    <section id="chap6">
+    <section id="chap6"><span>Soudain, un ballon le rattrape au vole et lui sauve la vie.</br></br></br></br>
+    Mais, tout un coup un oiseau éclate le ballon et Smiley rechute.</span>
         <img src="../img/img_elements_visuels/nuage.png" class="nuage no1" alt="nuage">
         <img src="../img/img_elements_visuels/nuage.png" class="nuage no2" alt="nuage">
         <img src="../img/img_elements_visuels/nuage.png" class="nuage no3" alt="nuage">
@@ -77,12 +78,12 @@
         <img src="../img/img_elements_visuels/oiseau.png" class="oiseau" alt="oiseau">
     </section>
     <section id="chap7">
-        
+        <span>Juste avant de toucher le sol un autre ballon vient amortir sa </br>chute et Smiley continue à marcher</span>
         <img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol" alt="sol">
         <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil">
         <div class="spritesheet2"></div>
     </section>
-    <section id="chap8">
+    <section id="chap8"><span>Au bout de sa marche il rencontra une jolie demoiselle, et le ballon </br>se transforma en coeur.</span>
         <img src="../img/img_elements_visuels/coline_bizzare.png" class="coline" alt="coline">
         <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil">
         <img src="../img/img_personnages/couple.png" class="couple" alt="couple">
