--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     
     <title>Smiley</title>
-    <link rel="icon" type="image/x-icon" href="/img/img_personnages/fav.png" class="fav">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png" class="fav">
 </head>
 <body>
  <header>
@@ -44,15 +44,15 @@
     </section>
     <section id="chap3">
         <span>Souvent il s'arrêta pour contempler les étoiles, Smiley adorait sa vie.</span>
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no1" alt="étoile1">
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no2" alt="étoile2">
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile gros no3" alt="étoile3">
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile moyen no1" alt="étoile4">
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile moyen no2" alt="étoile5">
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile moyen no3" alt="étoile6">
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile petit no1" alt="étoile7">
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile petit no2" alt="étoile8">
-        <img src="../img/img_elements_visuels/etoile.png" class="étoile petit no3" alt="étoile9">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile gros no1" alt="etoile1">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile gros no2" alt="etoile2">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile gros no3" alt="etoile3">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile moyen no1" alt="etoile4">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile moyen no2" alt="etoile5">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile moyen no3" alt="etoile6">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile petit no1" alt="etoile7">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile petit no2" alt="etoile8">
+        <img src="../img/img_elements_visuels/etoile.png" class="etoile petit no3" alt="etoile9">
         <img src="../img/img_elements_visuels/lune.png" class="lune" alt="lune">
         <img src="../img/img_personnages/face.png" class="face" alt="face">
     </section>
@@ -86,7 +86,12 @@
     <section id="chap8"><span>Au bout de sa marche il rencontra une jolie demoiselle, et le ballon </br>se transforma en coeur.</span>
         <img src="../img/img_elements_visuels/coline_bizzare.png" class="coline" alt="coline">
         <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil">
+        <img src="../img/img_elements_visuels/ballon_coeur.png" class="coeur" alt="coeur">
         <img src="../img/img_personnages/couple.png" class="couple" alt="couple">
+        
+    </section>
+    <section id="fin">
+        <span>FIN!!!</span>
     </section>
 </main>
 
