--- a/index.html
+++ b/index.html
@@ -64,11 +64,16 @@
         <img src="../img/img_elements_visuels/soleil.png" class="solei" alt="solei"></section>
     </section>
         <section id="chap5"><span>Malheureusement pour Smiley il perda l'équilibre et tomba!!!</span>
+           
             <img src="../img/img_elements_visuels/nuage.png" class="nuage no1" alt="nuage">
             <img src="../img/img_elements_visuels/nuage.png" class="nuage no2" alt="nuage">
             <img src="../img/img_elements_visuels/nuage.png" class="nuage no3" alt="nuage">
             <img src="../img/img_elements_visuels/nuage.png" class="nuage no4" alt="nuage">
-            <img src="../img/img_personnages/tomber.png" class="tomber" alt="tomber">
+            <img src="../img/img_personnages/tomber1.png" class="tomber" alt="tomber">
+            <svg xmlns="http://www.w3.org/2000/svg" width="2" height="2376" viewBox="0 0 2 2376" fill="none">
+                <rect width="2" height="2300" fill="#F5F5F5"/>
+                <path id="ligne" d="M1 0V2376" stroke="black"/>
+                </svg>
         </section>
     <section id="chap6"><span>Soudain, un ballon le rattrape au vole et lui sauve la vie.</br></br></br></br>
     Mais, tout un coup un oiseau éclate le ballon et Smiley rechute.</span>
