--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         <img src="../img/img_elements_visuels/sol_apres_tomber.png" class="sol" alt="sol">
         <img src="../img/img_elements_visuels/soleil.png" class="soleil" alt="soleil">
         <div class="spritesheet2"></div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="1381" height="885" viewBox="0 0 1381 885" fill="none">
+            <path id="dessin" d="M4 873.5C136 826 915.5 549.001 915.5 280.501C915.5 12.0002 753.5 12.0003 659 12.0003C564.5 12.0003 412.5 116.5 412.5 280.5C412.5 444.501 609 543.1 694 552.833C779 562.566 1376.5 786 1376.5 786" stroke="#ff4daf" stroke-width="23"/>
+            </svg>
     </section>
     <section id="chap8"><span>Au bout de sa marche il rencontra une jolie demoiselle, et le ballon </br>se transforma en coeur.</span>
         <img src="../img/img_elements_visuels/coline_bizzare.png" class="coline" alt="coline">
