--- a/index.html
+++ b/index.html
@@ -38,11 +38,15 @@
         <img src="../img/img_elements_visuels/soleil.png" class="jour" alt="jour"></section>
     <section id="chap2">
         <span>Il alla jusqu'au bout du monde il traversa les montagne,</br> sous la vue du merveilleux paysage.</span>
+        
         <img src="../img/img_elements_visuels/gazon_coucher_soleil.png" class="gazon" alt="gazon">
-        <img src="../img/img_elements_visuels/vert_montagne.png" class="montagne1" alt="montagne1">
-        <img src="../img/img_elements_visuels/foncer_montagne.png" class="montagne2" alt="montagne2">
-        <img src="../img/img_elements_visuels/clair_montagne.png" class="montagne3" alt="montagne3">
+        <div class="layer montagne1"></div>
+        <div class="layer montagne2"></div>
+        <img src="../img/img_elements_visuels/clair_montagne.png" class="montagne3">
         <img src="../img/img_personnages/petit.png" class="petite" alt="petite">
+        <div class="layer nuage1"></div>
+        <div class="layer nuage2"></div>
+        <div class="layer nuage3"></div>
     </section>
     <section id="chap3">
         <span>Souvent il s'arrêta pour contempler les étoiles, Smiley adorait sa vie.</span>
