--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/MotionPathPlugin.min.js"></script>
 <!--<script src="https://assets.codepen.io/16327/DrawSVGPlugin3.min.js"></script>-->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     
     <title>Smiley</title>
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png" class="fav">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png" class="fav">
 </head>
 <body>
  <header>
    <h1>Les aventures de Smiley</h1>
    <h2>Faites défiler vers le bas</h2>
-<img src="../img/img_elements_visuels/flech.png" class="flech">
+<img src="img/img_elements_visuels/flech.png" class="flech">
     <p>« Projet créé dans le cadre du cours Optimisation Web - Intégration multimédia - Collège Montmorency.
         © 2023 - Conception : Thea Lacasse| Développement Web : Maïka Désy. »</p>
 
