--- a/index.html
+++ b/index.html
@@ -102,7 +102,21 @@
         <img src="img/img_elements_visuels/soleil.png" class="soleil" alt="soleil">
         <img src="img/img_elements_visuels/ballon_coeur.png" class="coeur" alt="coeur">
         <img src="img/img_personnages/couple.png" class="couple" alt="couple">
-        
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="143" height="157" viewBox="0 0 143 157" fill="none">
+            <g id="Group 1">
+            <rect id="coeur 1" width="143" height="157" fill="url(#pattern0)"/>
+            <rect id="rond 1" y="4" width="143" height="150" fill="url(#pattern1)"/>
+            </g>
+            <defs>
+            <pattern id="pattern0" patternContentUnits="objectBoundingBox" width="1" height="1">
+            <use xlink:href="#image0_1_5" transform="matrix(0.00567781 0 0 0.00556931 -4.74865 -1.87261)"/>
+            </pattern>
+            <pattern id="pattern1" patternContentUnits="objectBoundingBox" width="1" height="1">
+            <use xlink:href="#image1_1_5" transform="matrix(0.00699301 0 0 0.00666667 -6.38462 -2.7)"/>
+            </pattern>
+     
+            </defs>
+            </svg>
     </section>
     <section id="fin">
         <span>FIN!!!</span>
