--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--<script src="https://assets.codepen.io/16327/MorphSVGPlugin3.min.js"></script>-->
 <!--<script src="https://assets.codepen.io/16327/DrawSVGPlugin3.min.js"></script>-->
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.min.css">
     
     <title>Smiley</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.png" class="fav">
